# mealdeal-backend

./: .env  .gitignore  Aptfile  Procfile  README.md  __init__.py  app.py  mealdeal.db  pyproject.toml  requirements.txt  start.py
.azure/: config
.github/workflows/: master_mealdealbackend.yml  master_mealdealtest.yml
mealdeal_backend/: auth.py  db.py  exceptions.py  routes.py  schema.py
